# pchtest

./: .travis.yml  CMakeLists.txt  CompilePch.cmake  PchLinkTarget.cmake  README.md  dialog.h  func.mm  main.cpp  pch.h
